# xnlogo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: examples.yml  tests.yml
docs/: architecture.md  python-netlogo-compatibility.md  technical-overview.md  testing-strategy.md  translation-rules.md  ui-api.md  user-guide.md
examples/: boids.py  counter.py  diffusion.py  epidemic.py  flocking.py  foraging.py  global_pandemic.py  population.py  predator_prey.py  random_walk.py  random_walker.py  schelling.py  segregation.py  traffic.py
tests/: test_cli_export.py  test_compiler.py  test_golden.py  test_netlogo_validity.py  test_parser.py  test_semantics.py  test_syntax_validation.py  test_telemetry.py  test_translator.py
tests/data/: agent_with_conditionals.py  agent_with_loops.py  complex_agent.py  invalid_behavior_syntax.py  invalid_syntax.py  multi_breed.py  sample_model.py  simple_agent.py  valid_behavior_syntax.py
tests/data/golden/: agent_with_conditionals.nlogox  complex_agent.nlogox  multi_breed.nlogox  simple_agent.nlogox
xnlogo/: __init__.py  compiler.py
xnlogo/cli/: commands.py
xnlogo/codegen/: __init__.py  netlogo_generator.py  netlogo_translator.py
xnlogo/codegen/templates/: base.nlogo.j2  base.nlogox.xml.j2
xnlogo/ir/: model.py  statements.py
xnlogo/parser/: ast_parser.py  py_to_netlogo.py
xnlogo/runtime/: __init__.py  api.py  session.py  telemetry.py  ui.py
xnlogo/semantics/: checks.py  diagnostics.py
